<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/register_background"
             tools:context="com.soul.commumication.ui.fragment.RegisterPhoneFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/base_toolbar"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/register_phone_mt"
            android:background="@color/register_phone_line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/register_phone_height"

            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/colorwhile"
                android:gravity="center"
                android:paddingLeft="@dimen/register_phone_pl"
                android:paddingRight="@dimen/register_phone_pr"
                android:text="@string/china"
                android:textColor="@color/bule_pressed"
                android:textSize="@dimen/textSize1"/>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/register_phone_line"/>


            <EditText
                android:id="@+id/editText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorwhile"
                android:gravity="center_vertical"
                android:hint="@string/inputPhone"
                android:inputType="phone"
                android:maxLength="11"
                android:paddingLeft="@dimen/et_register_phhone_ml"
                android:textColor="@color/et_register_phonecloor"
                android:textColorHint="@color/login_hint"
                android:textSize="@dimen/textSize1"/>

            <ImageView
                android:id="@+id/iv_phone_delete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="@color/colorwhile"
                android:paddingRight="@dimen/iv_phone_pl"
                android:src="@drawable/delete"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/register_phone_line"/>

        <Button
            android:id="@+id/button"
            style="@style/buttonbackgroundColor"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_bt_height"
            android:layout_marginLeft="@dimen/login_bt_ml"
            android:layout_marginRight="@dimen/login_bt_mr"
            android:layout_marginTop="@dimen/login_bt"
            android:text="@string/nextStep"/>

    </LinearLayout>

</FrameLayout>
